--- a/trunk/WeBoCa/src/drayson/weboca/gui/SearchEngineConfigPanel.form
+++ b/trunk/WeBoCa/src/drayson/weboca/gui/SearchEngineConfigPanel.form
@@ -57,11 +57,11 @@
         <Component class="javax.swing.JList" name="lstSearchEngines">
           <Properties>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-              <StringArray count="1">
+              <StringArray count="2">
                 <StringItem index="0" value="Google"/>
+                <StringItem index="1" value="Yahoo"/>
               </StringArray>
             </Property>
-            <Property name="selectedIndex" type="int" value="0"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="CheckListManager checkListManager = new CheckListManager(lstSearchEngines);&#xa;checkListManager.checkAll();"/>
