--- a/WeBoCa/src/drayson/weboca/gui/SearchDownloadPanel.form
+++ b/WeBoCa/src/drayson/weboca/gui/SearchDownloadPanel.form
@@ -121,7 +121,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Overall Progress"/>
+        <Property name="text" type="java.lang.String" value="Overall Progress (all URLs)"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lblWordCount">
